--- a/crud_back/src/main/resources/application.properties
+++ b/crud_back/src/main/resources/application.properties
@@ -4,10 +4,10 @@ server.port=7071
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/product
+spring.datasource.url=jdbc:mysql://database-1.cpwmuucigs3e.us-east-1.rds.amazonaws.com:3306/cicd
 
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=admin
+spring.datasource.password=adminadmin
 
 spring.jpa.hibernate.ddl-auto=update
 
