--- a/crud_back/src/main/resources/application.properties
+++ b/crud_back/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=cruddemo
 
-server.port=7071
+server.port=9090
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://database-1.cpwmuucigs3e.us-east-1.rds.amazonaws.com:3306/cicd
+spring.datasource.url=jdbc:mysql://database-1.cpwmuucigs3e.us-east-1.rds.amazonaws.com:3306/cicd?useSSL=false&allowPublicKeyRetrieval=true
 
 spring.datasource.username=admin
 spring.datasource.password=adminadmin
